Removed SubscriptionsThankYou component, switched to using smaller components composed.

--- a/assets/components/headingBlock/headingBlock.scss
+++ b/assets/components/headingBlock/headingBlock.scss
@@ -1,4 +1,4 @@
-.component-heading-block {
+.component-heading-block__content {
   background-color: gu-colour(garnett-neutral-1);
   color: gu-colour(news-garnett-highlight);
 }
