Update signup info message

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -952,3 +952,8 @@ form {
 .component-paypal-button-checkout--hidden {
   display: none;
 }
+
+.information__message {
+  vertical-align: top;
+  padding-left: 5px;
+}
