--- a/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -8,6 +8,7 @@
 @import '~components/ctaLink/ctaLink';
 @import '~components/doubleHeading/doubleHeading';
 @import '~components/featuredDigitalPack/featuredDigitalPack';
+@import '~components/featuredDigitalPack/flashSaleDigitalPack';
 @import '~components/featureList/featureList';
 @import '~components/footer/footer';
 @import '~components/headers/simpleHeader/simpleHeader';
@@ -33,7 +34,6 @@
     margin-top: $gu-v-spacing;
   }
 
-  // As a test we are tweaking the layout of the US product bundles
   .component-subscriptions-by-country-group--us .component-double-heading__subheading {
     font-size: 24px;
   }
