--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -170,7 +170,7 @@ body {
   color: gu-colour(garnett-neutral-1);
   font: bold 36px/1.15 $gu-headline;
   margin: 0 -10px;
-  padding: 0 10px $gu-v-spacing*1.5 10px;
+  padding: 0 $gu-h-spacing/2 $gu-v-spacing*1.5 $gu-h-spacing/2;
 }
 
 input,
