--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -577,7 +577,7 @@ form {
 .form__radio-group-list {
   list-style: none;
   margin: 0;
-  padding: 12px 0 0 0;
+  padding: $gu-v-spacing 0 0 0;
 }
 
 .form__radio-group-input {
@@ -646,7 +646,7 @@ form {
 .form__radio-group--buttons .form__radio-group-label {
   align-items: center;
   display: flex;
-  padding: 6px 0;
+  padding: $gu-v-spacing/2 0;
 }
 
 .form__radio-group--buttons .form__radio-group-input:checked + .form__radio-group-label {
