--- a/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
+++ b/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
@@ -1,17 +1,6 @@
 .component-flash-sale-featured-digital-pack{
   position: relative;
   background: gu-colour(garnett-neutral-3);
-  display: flex;
-
-  @include mq($from: tablet) {
-    width: 100%;
-    padding-left: 18%;
-  }
-
-  @include mq($from: desktop) {
-    width: 100%;
-    padding-left: 20%;
-  }
 
   .component-cta-link {
     background-color: gu-colour(news-garnett-highlight);
@@ -21,7 +10,11 @@
     line-height: 40px;
     font-size: 14px;
     padding-left: 18px;
-    margin-top: $gu-v-spacing * 2;
+    margin-top: $gu-v-spacing;
+
+    @include mq($from: phablet) {
+      margin-top: $gu-v-spacing * 2;
+    }
 
     .svg-arrow-right-straight {
       fill: gu-colour(garnett-neutral-1);
@@ -33,18 +26,14 @@
     &:hover {
       background-color: darken(gu-colour(news-garnett-highlight), 5%);
     }
-
-    @include mq($from: tablet) {
-      margin-top: $gu-v-spacing * 3;
-    }
   }
 
   .component-grid-picture__image {
-    width: 200px;
+    width: 260px;
     display: block;
 
-    @include mq($from: mobileLandscape) {
-      width: 240px;
+    @include mq($from: phablet) {
+      width: 440px;
     }
 
     @include mq($from: tablet) {
@@ -52,6 +41,36 @@
       width: 450px;
     }
 
+    @include mq($from: desktop) {
+      margin-top: 30px;
+      width: 480px;
+    }
+
+    @include mq($from: leftCol) {
+      margin-top: 30px;
+      width: 580px;
+    }
+
+  }
+}
+
+.component-flash-sale-featured-digital-pack__content {
+  display: flex;
+
+  @include mq($from: tablet) {
+    position: relative;
+  }
+
+  @include mq($from: desktop) {
+    padding-left: 190px;
+  }
+
+  @include mq($from: leftCol) {
+    padding-left: 220px;
+  }
+
+  @include mq($from: wide) {
+    padding-left: 250px;
   }
 }
 
@@ -72,13 +91,6 @@
   bottom: 0;
   right: 0;
   overflow: hidden;
-
-  @include mq($from: tablet) {
-    position: initial;
-    display: flex;
-    flex-direction: column-reverse;
-    flex-grow: 1;
-  }
 }
 
 .component-flash-sale-featured-digital-pack__title {
