--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -54,7 +54,7 @@ header[role="banner"] {
 
 .countryGroups {
   font-family: $gu-text-sans-web;
-  margin-top: $gu-v-spacing;
+  margin-top: $gu-v-spacing * 2.5;
   max-width: 355px;
   padding: 0;
   width: 100%;
@@ -90,12 +90,14 @@ header[role="banner"] {
 .countryGroups .svg-checkmark {
   width: 18px;
   height: 14px;
+  fill: gu-colour(news-garnett-main-1);
 }
 
 .countryGroups .svg-globe {
   padding: 0 $gu-v-spacing;
   width: 14px;
   height: 14px;
+  fill: gu-colour(garnett-neutral-1);
 }
 
 .countryGroups summary {
@@ -121,12 +123,31 @@ header[role="banner"] {
   border: 1px solid gu-colour(garnett-neutral-4);
 }
 
+.countryGroups__item:first-child > a {
+  &:before {
+    content: none;
+  }
+}
+
 .countryGroups__item > a {
   color: inherit;
   display: flex;
-  padding: 0 40px;
+  padding: 0 15px;
   line-height: 40px;
   text-decoration: none;
+  justify-content: space-between;
+  position: relative;
+
+
+  &:before {
+    content: '';
+    border-top: 1px solid gu-colour(garnett-neutral-4);
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 15px;
+    right: 0;
+  }
 }
 
 .countryGroups__item > a:hover,
@@ -419,7 +440,7 @@ header[role="banner"] {
     }
 
     .countryGroups {
-      grid-column: 4 / 8;
+      grid-column: 4 / 7;
       grid-row: 1;
     }
 
@@ -556,7 +577,7 @@ form {
 .form__radio-group-list {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: $gu-v-spacing 0 0 0;
 }
 
 .form__radio-group-input {
@@ -625,8 +646,7 @@ form {
 .form__radio-group--buttons .form__radio-group-label {
   align-items: center;
   display: flex;
-  margin-bottom: 8px;
-  padding: 9px 0;
+  padding: $gu-v-spacing/2 0;
 }
 
 .form__radio-group--buttons .form__radio-group-input:checked + .form__radio-group-label {
