Added preference centre info.

--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -140,6 +140,11 @@
     }
   }
 
+  .thank-you-content__copy--small {
+    font-family: $gu-text-sans-web;
+    color: gu-colour(garnett-neutral-6);
+  }
+
   .thank-you-content__copy--free-trial {
     font-style: italic;
     margin: 0;
