--- a/assets/components/flashSaleCountdown/flashSaleCountdown.scss
+++ b/assets/components/flashSaleCountdown/flashSaleCountdown.scss
@@ -9,10 +9,11 @@
   background: gu-colour(sport-garnett-feature);
   color: #fff;
   font-weight: 800;
-  width: 98px;
+  /*This fixed width is set to prevent the counter from shifting sizes slightly when the time changes, as the font doesn't have monospaced numbers.*/
   text-align: center;
   padding-left: 0;
   padding-right: 0;
+  width: 98px;
 }
 
 .component-flash-sale-countdown__chip--help {
