--- a/assets/components/flashSaleCountdown/flashSaleCountdown.scss
+++ b/assets/components/flashSaleCountdown/flashSaleCountdown.scss
@@ -10,10 +10,11 @@
   color: #fff;
   font-weight: 800;
   /*This fixed width is set to prevent the counter from shifting sizes slightly when the time changes, as the font doesn't have monospaced numbers.*/
-  text-align: center;
-  padding-left: 0;
-  padding-right: 0;
-  width: 98px;
+  .component-countdown__time {
+    min-width: 24px;
+    display: inline-block;
+    text-align: center;
+  }
 }
 
 .component-flash-sale-countdown__chip--help {
