--- a/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -24,6 +24,7 @@
 @import '~components/subscriptionsByCountryGroup/subscriptionsByCountryGroup';
 @import '~components/whySupport/whySupport';
 @import '~components/whySupportVideo/whySupportVideo';
+@import '~components/flashSaleCountdown/flashSaleCountdown';
 
 
 // ----- Page-Specific Styles ----- //
