uses cta for back to the gu link

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -917,6 +917,10 @@ form {
   margin-bottom: $gu-v-spacing + 20px;
   padding-bottom: $gu-v-spacing;
   padding-top: $gu-v-spacing;
+
+  & > a {
+    font-size: 16px;
+  }
 }
 
 .confirmation__meta {
