--- a/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
+++ b/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
@@ -3,13 +3,10 @@
   background: gu-colour(garnett-neutral-3);
 
   .component-flash-sale-countdown {
-    position: absolute;
-    bottom: 0;
-    margin-top: $gu-v-spacing * 2;
-    background: gu-colour(garnett-neutral-3);
     @include mq($from: tablet) {
-      position: relative;
+      margin-top: $gu-v-spacing * -1;
     }
+    background: gu-colour(garnett-neutral-3);
   }
 
   .component-cta-link {
@@ -99,7 +96,7 @@
   min-height: 430px;
   @include mq($from: tablet) {
     flex: 0 440px;
-    margin: 10px 0 0;
+    margin: $gu-v-spacing 0 0;
     padding-right: 0;
     padding-left: 20px;
   }
