flash sale countdown on digital page

--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -14,6 +14,7 @@
 @import '~components/priceCta/priceCta';
 @import '~components/customerService/customerService';
 @import '~components/adFreeSection/adFreeSection';
+@import '~components/flashSaleCountdown/flashSaleCountdown';
 @import 'components/independentJournalismSection';
 @import 'components/promotionPopUp';
 
