move over countdown

--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -257,6 +257,9 @@
     .component-price-cta__secondary {
       border-left: 1px solid gu-colour(garnett-neutral-4);
     }
+    .component-flash-sale-countdown {
+      font-size: 1.2em;
+    }
   }
 
   .digital-subscription-landing-header__wrapper {
