--- a/assets/components/flashSaleCountdown/flashSaleCountdown.scss
+++ b/assets/components/flashSaleCountdown/flashSaleCountdown.scss
@@ -1,6 +1,9 @@
+.component-flash-sale-countdown {
+  font-size: 14px;
+}
+
 .component-flash-sale-countdown__chip {
   font-family: $gu-text-sans-web;
-  font-size: 14px;
   padding: 6px 10px 4px;
   display: inline-block;
 }
