--- a/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
+++ b/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
@@ -96,9 +96,9 @@
   min-height: 430px;
   @include mq($from: tablet) {
     flex: 0 440px;
-    margin: $gu-v-spacing 0 0;
+    margin: 10px 0 20px;
     padding-right: 0;
-    padding-left: 20px;
+    padding-left: 25px;
   }
 }
 
@@ -145,9 +145,5 @@
 }
 
 .component-cta-link--flash-sale {
-  z-index: 2;
-}
-
-.component-flash-sale-countdown {
   z-index: 1;
 }
