fix margin offset

--- a/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
+++ b/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
@@ -4,7 +4,7 @@
 
   .component-flash-sale-countdown {
     @include mq($from: tablet) {
-      margin-top: $gu-v-spacing * -1;
+      margin-top: -10px;
     }
     background: gu-colour(garnett-neutral-3);
   }
