--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -258,7 +258,16 @@
       border-left: 1px solid gu-colour(garnett-neutral-4);
     }
     .component-flash-sale-countdown {
-      font-size: 1.2em;
+      z-index: 10;
+      position: relative;
+      border-top: 1px solid #fff;
+      background: gu-colour(garnett-neutral-1);
+      color: #fff;    
+      .component-countdown__chip {
+        padding-left: 10px;
+        padding-right: 10px;
+        border-color: rgba(250,250,250,0.2);
+      }
     }
   }
 
