--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -313,7 +313,7 @@
     padding-top: 2px;
     font-size: 22px;
     line-height: 29px;
-    height: 70px;
+    min-height: 70px;
     width: 250px;
 
     @include mq($from: mobileMedium, $until: tablet) {
