--- a/assets/components/flashSaleCountdown/flashSaleCountdown.scss
+++ b/assets/components/flashSaleCountdown/flashSaleCountdown.scss
@@ -1,16 +1,13 @@
 .component-flash-sale-countdown {
   font-size: 14px;
-  line-height: 20px;
+  line-height: 16px;
   font-family: $gu-text-egyptian-web;
   overflow: hidden;
-  @include mq($from: mobileLandscape) {
-    font-size: 16px;
-  }
 }
 
 .component-flash-sale-countdown .component-countdown__chip {
   display: inline-block;
-  padding: $gu-v-spacing / 4 $gu-h-spacing / 4 $gu-v-spacing / 2;
+  padding: $gu-v-spacing / 4 $gu-h-spacing / 4;
   
   &:not(:last-child) {
     border-right: 1px solid currentColor;
@@ -19,7 +16,7 @@
 
 .component-flash-sale-countdown .component-countdown__chip--legend {
   font-style: italic;
-  padding-top: $gu-v-spacing / 4 + 20;
+  padding-top: $gu-v-spacing / 4 + 16px;
 }
 
 .component-flash-sale-countdown .component-countdown__time {
