--- a/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
+++ b/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
@@ -34,13 +34,15 @@
 
     .component-flash-sale-countdown {
       margin: 0 -5px;
+      color: #bb3b80;
+      width: 600%;
       .component-countdown {
         background: darken(gu-colour(garnett-neutral-3), 5%);
-        border-bottom: 1.5px solid gu-colour(garnett-neutral-4);
-        display: inline-block;
+        border-top: 1px solid gu-colour(garnett-neutral-4);
+        border-bottom: 1px solid gu-colour(garnett-neutral-4);
       }
       .component-countdown__chip {
-        border-color: gu-colour(garnett-neutral-4);
+        border-color: rgba(250,250,250,.2);
       }
     }  
   }
@@ -103,9 +105,8 @@
   @extend .gu-content-margin;
   position: relative;
 
-  min-height: 430px;
   @include mq($from: tablet) {
-    flex: 0 440px;
+    flex: 0 460px;
     margin: 10px 0 0;
     padding-right: 0;
     padding-left: 21px;
@@ -125,12 +126,8 @@
   font-family: $gu-headline;
   font-weight: bold;
   @include mq($from: tablet) {
-    font-size: 58px;
-    line-height: 60px;
-  }
-  @include mq($from: leftCol) {
-    font-size: 60px;
-    line-height: 62px;
+    font-size: 54px;
+    line-height: 58px;
   }
 }
 
