--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -24,15 +24,6 @@
 #digital-subscription-checkout-page-us,
 #digital-subscription-checkout-page-au {
 
-  // ----- General
-
-  .component-left-margin-section__content {
-    overflow-x: hidden;
-    @include mq($from: leftCol) {
-      overflow-x: visible;
-    }
-  }
-
   // ----- Heading
 
   .component-product-hero {
@@ -49,6 +40,10 @@
   // ----- Thank You
 
   .thank-you-content {
+    // Makes sure the circle SVGs stay behind the heading.
+    position: relative;
+    background-color: #fff;
+
     .component-left-margin-section__content {
       padding: 2px ($gu-h-spacing / 2) $gu-v-spacing;
       box-sizing: border-box;
@@ -133,7 +128,7 @@
     line-height: 1.25;
     font-family: $gu-headline;
     color: gu-colour(media-garnett-main-1);
-    margin: $gu-v-spacing 0 ($gu-v-spacing * 2);
+    margin: $gu-v-spacing 0;
 
     @include mq($from: phablet) {
       width: 560px;
@@ -147,7 +142,7 @@
 
   .thank-you-content__copy--italic {
     font-style: italic;
-    margin: 0;
+    margin-top: 0;
   }
 
   .thank-you-content__strong {
