--- a/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
+++ b/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
@@ -51,7 +51,7 @@
       border-bottom: 1px solid gu-colour(garnett-neutral-4);
     }
     .component-countdown__chip {
-      border-color: rgba(250,250,250,.2);
+      border-color: gu-colour(garnett-neutral-4);
     }
   }
   
