--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -271,6 +271,10 @@
     }
   }
 
+  .digital-subscription-landing-header__countdown--hidden {
+    display: none;
+  }
+
   .digital-subscription-landing-header__wrapper {
     position: relative;
   }
