--- a/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
+++ b/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
@@ -29,16 +29,12 @@
   }
 
   .component-flash-sale-featured-digital-pack__countdownbox {
-    padding: 0 0 80px;
+    border-left: 1px solid gu-colour(garnett-neutral-4);
+    padding-left: 5px;
 
     @include mq($from: tablet) {
       padding-bottom: 20px;
     }
-  }
-
-  .component-flash-sale-featured-digital-pack__countdownbox--active {
-    border-left: 1px solid gu-colour(garnett-neutral-4);
-    padding-left: 5px;
   }
 
   .component-flash-sale-featured-digital-pack__countdownbox .component-flash-sale-countdown {
@@ -53,6 +49,15 @@
     .component-countdown__chip {
       border-color: gu-colour(garnett-neutral-4);
     }
+  }
+
+  .component-flash-sale-featured-digital-pack__countdownbox--hidden {
+    border-left: 0;
+    padding-left: 0;
+  }
+
+  .component-flash-sale-featured-digital-pack__countdownbox--hidden .component-flash-sale-countdown {
+    display: none;
   }
   
   .component-grid-picture__image {
