--- a/assets/components/flashSaleCountdown/flashSaleCountdown.scss
+++ b/assets/components/flashSaleCountdown/flashSaleCountdown.scss
@@ -1,22 +1,30 @@
-.component-flash-sale-countdown__chip {
-  font-family: $gu-text-sans-web;
-  font-size: 18px;
-  padding: 6px 10px 4px;
-  display: inline-block;
+.component-flash-sale-countdown {
+  font-size: 14px;
+  line-height: 16px;
+  font-family: $gu-text-egyptian-web;
+  overflow: hidden;
 }
 
-.component-flash-sale-countdown__chip--time {
-  background: gu-colour(sport-garnett-feature);
-  color: #fff;
-  font-weight: 800;
-  /*This fixed width is set to prevent the counter from shifting sizes slightly when the time changes, as the font doesn't have monospaced numbers.*/
-  .component-countdown__time {
-    min-width: 24px;
-    display: inline-block;
-    text-align: center;
+.component-flash-sale-countdown .component-countdown__chip {
+  display: inline-block;
+  padding: $gu-v-spacing / 3 $gu-h-spacing / 4;
+  
+  &:not(:last-child) {
+    border-right: 1px solid currentColor;
   }
 }
 
-.component-flash-sale-countdown__chip--help {
-  color: gu-colour(sport-garnett-feature);
+.component-flash-sale-countdown .component-countdown__chip--legend {
+  font-style: italic;
+  padding-top: $gu-v-spacing / 3 + 16px;
+}
+
+.component-flash-sale-countdown .component-countdown__time {
+  font-weight: 800;
+  display: block;
+}
+
+.component-flash-sale-countdown .component-countdown {
+  display: flex;
+  justify-content: flex-start;
 }
