--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -14,6 +14,7 @@
 @import '~components/priceCta/priceCta';
 @import '~components/customerService/customerService';
 @import '~components/adFreeSection/adFreeSection';
+@import '~components/flashSaleCountdown/flashSaleCountdown';
 @import 'components/independentJournalismSection';
 @import 'components/promotionPopUp';
 
@@ -256,6 +257,22 @@
     .component-price-cta__secondary {
       border-left: 1px solid gu-colour(garnett-neutral-4);
     }
+    .component-flash-sale-countdown {
+      z-index: 10;
+      position: relative;
+      border-top: 1px solid #fff;
+      background: gu-colour(garnett-neutral-1);
+      color: #fff;    
+      .component-countdown__chip {
+        padding-left: 10px;
+        padding-right: 10px;
+        border-color: rgba(250,250,250,0.2);
+      }
+    }
+  }
+
+  .digital-subscription-landing-header__countdown--hidden {
+    display: none;
   }
 
   .digital-subscription-landing-header__wrapper {
@@ -300,7 +317,7 @@
     padding-top: 2px;
     font-size: 22px;
     line-height: 29px;
-    height: 70px;
+    min-height: 70px;
     width: 250px;
 
     @include mq($from: mobileMedium, $until: tablet) {
