--- a/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
+++ b/assets/components/featuredDigitalPack/flashSaleDigitalPack.scss
@@ -31,7 +31,11 @@
   .component-flash-sale-featured-digital-pack__countdownbox {
     border-left: 1px solid gu-colour(garnett-neutral-4);
     padding-left: 5px;
-    padding-bottom: 70px;
+    padding-bottom: 120px;
+
+    @include mq($from: tablet) {
+      padding-bottom: 70px;
+    }
   }
 
   .component-flash-sale-featured-digital-pack__countdownbox .component-flash-sale-countdown {
