make background yellow for thank you

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -239,6 +239,11 @@ header[role="banner"] {
     width: 100%;
   }
 
+  .thank-you__container .header {
+    background-color: gu-colour(news-garnett-highlight);
+  }
+
+
   .glogo {
     top: 10px;
     right: 10px;
