Rejig the circle-less header on mobile (#1089)
* circles gone on mobile, looks aite now

* make background yellow for thank you

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -235,11 +235,14 @@ header[role="banner"] {
 @include mq($from: mobile, $until: tablet) {
   .header {
     border: 0;
-    position: absolute;
-    top: 0;
     left: 10px;
-    width: 290px;
+    width: 100%;
   }
+
+  .thank-you__container .header {
+    background-color: gu-colour(news-garnett-highlight);
+  }
+
 
   .glogo {
     top: 10px;
@@ -252,8 +255,7 @@ header[role="banner"] {
   }
 
   .gu-content__bg {
-    height: 280px;
-    position: relative;
+    display: none;
   }
 
   .gu-content__bg .svg-contributions-bg-desktop {
