--- a/assets/components/featuredProductHero/featuredProductHero.scss
+++ b/assets/components/featuredProductHero/featuredProductHero.scss
@@ -198,5 +198,5 @@
   @include with-colour(sport-garnett-media-main-1);
 }
 .component-featured-product-hero--guardian-weekly {
-  @include with-colour(opinion-garnett-main-1);
+  @include with-colour(opinion-garnett-media-main-1);
 }
