fix feat. product

--- a/assets/components/featuredProductHero/featuredProductHero.scss
+++ b/assets/components/featuredProductHero/featuredProductHero.scss
@@ -47,7 +47,7 @@
 
   .component-featured-product-hero__countdownbox .component-flash-sale-countdown {
     margin: 0 -5px;
-    width: 130%;
+    width: 160%;
     display: inline-block;
     .component-countdown {
       background: darken(gu-colour(garnett-neutral-3), 5%);
@@ -103,10 +103,10 @@
 .component-featured-product-hero__content {
   @extend .gu-content-margin;
 
-  display: flex;
-
   @include mq($from: tablet) {
     position: relative;
+    display: flex;
+    align-items: flex-end;
   }
 
   @include mq($from: desktop) {
@@ -126,8 +126,12 @@
   @extend .gu-content-margin;
   position: relative;
 
+  @include mq($from: tablet) {
+    flex: 0 0 380px;
+  }
+
   @include mq($from: desktop) {
-    flex: 0 460px;
+    flex: 0 0 460px;
     margin: 10px 0 0;
     padding-right: 0;
     padding-left: 21px;
@@ -143,10 +147,13 @@
 }
 
 .component-featured-product-hero__image {
-  position: absolute;
+  position: relative;
+  z-index: 10;
   bottom: 0;
   right: 0;
-  overflow: hidden;
+  @include mq($until: tablet) {
+    position: absolute;
+  }
 }
 
 .component-featured-product-hero__title {
