--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -72,7 +72,7 @@
 
 	@styles
 </head>
-<body>
+<body @if(showTweakedHeader) { class="header-tweaks" }>
 	<noscript>
     <div style="text-align: center;
                 font-size: 30px;
