--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -13,6 +13,8 @@
 @import '~components/leftMarginSection/leftMarginSection';
 @import '~components/priceCta/priceCta';
 @import '~components/customerService/customerService';
+@import '~components/subscriptionFaq/subscriptionFaq';
+@import '~components/legal/subscriptionTermsPrivacy/subscriptionTermsPrivacy';
 @import '~components/adFreeSection/adFreeSection';
 @import '~components/flashSaleCountdown/flashSaleCountdown';
 @import 'components/independentJournalismSection';
