--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -12,6 +12,8 @@
 @import '~components/headers/simpleHeader/simpleHeader';
 @import '~components/leftMarginSection/leftMarginSection';
 @import '~components/customerService/customerService';
+@import '~components/subscriptionFaq/subscriptionFaq';
+@import '~components/legal/subscriptionTermsPrivacy/subscriptionTermsPrivacy';
 @import '~components/headingBlock/headingBlock';
 @import '~components/returnSection/returnSection';
 @import '~components/productHero/productHero';
