--- a/assets/components/legal/subscriptionTermsPrivacy/subscriptionTermsPrivacy.scss
+++ b/assets/components/legal/subscriptionTermsPrivacy/subscriptionTermsPrivacy.scss
@@ -1,10 +1,10 @@
 .component-subscription-terms-privacy__text {
-  color: gu-colour(neutral-4);
+  color: gu-colour(garnett-neutral-4);
   display: block;
 }
 
 .component-subscription-terms-privacy__href {
-  color: gu-colour(neutral-4);
+  color: inherit;
   text-decoration: none;
 }
 
