--- a/assets/components/subscriptionFaq/subscriptionFaq.scss
+++ b/assets/components/subscriptionFaq/subscriptionFaq.scss
@@ -1,10 +1,10 @@
 .component-subscription-faq__text {
-  color: gu-colour(neutral-4);
+  color: gu-colour(garnett-neutral-4);
   display: block;
 }
 
 .component-subscription-faq__href {
-  color: gu-colour(neutral-4);
+  color: inherit;
   text-decoration: none;
 }
 
