fix error message height

--- a/assets/components/directDebit/directDebitForm/directDebitForm.scss
+++ b/assets/components/directDebit/directDebitForm/directDebitForm.scss
@@ -12,7 +12,7 @@
     background-color: transparent;
     color: gu-colour(error);
     padding: 0;
-    height: 0;
+    height: 60px;
   }
 
   .svg-exclamation-alternate {
