--- a/assets/components/errorMessage/errorMessage.scss
+++ b/assets/components/errorMessage/errorMessage.scss
@@ -36,3 +36,22 @@
   transform: translateY(-50%);
   left: 10%;
 }
+
+
+.component-error-message--sign-in {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
+  height: auto;
+  padding: $gu-v-spacing/2 $gu-h-spacing;
+
+  @include mq($from: mobileLandscape) {
+    height: auto;
+  }
+
+  @include mq($from: tablet) {
+    height: auto;
+  }
+}
