--- a/assets/components/featuredProductHero/featuredProductHero.scss
+++ b/assets/components/featuredProductHero/featuredProductHero.scss
@@ -68,7 +68,7 @@
     display: none;
   }
   
-  .component-grid-picture__image {
+  .component-grid-picture__image, .component-grid-image {
     width: 180px;
     display: block;
 
