--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -7,3 +7,4 @@
 
 @import '~components/footer/footer';
 @import '~components/headers/simpleHeader/simpleHeader';
+@import '~components/headingBlock/headingBlock';
