--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -11,23 +11,28 @@
 @import '~components/leftMarginSection/leftMarginSection';
 
 .weekly-subscription-landing-header {
-  background: #C5C4C4;
-  margin-bottom: 50px;
+  background: gu-colour(garnett-neutral-3);
   overflow: hidden;
+  .component-left-margin-section__content {
+    border-left: 1px solid gu-colour(garnett-neutral-4);
+  }
 }
 
 .weekly-subscription-landing-header img {
-  width: 50%;
+  width: 30%;
   display: block;
-  animation: gw-dance .8s infinite alternate ease-in-out;
-
 }
 
-@keyframes gw-dance {
-  from, 49% { transform-origin: -50% 100%; }
-  50%, 75%, to { transform-origin: 150% 100%; }
-  25% { transform: rotate(-10deg); }
-  50% { transform: rotate(0deg); }
-  75% { transform: rotate(10deg); }
-}
+.weekly-subscription-underheader {
+  .component-left-margin-section__content {
+    border-left: 1px solid gu-colour(garnett-neutral-4);
+  }
 
+  .weekly-subscription-underheader__cta {
+    border-top: 1px solid #ffffff;
+    margin-bottom: 50px;
+    padding: ($gu-v-spacing / 2)  ($gu-h-spacing / 2);
+    background: gu-colour(garnett-neutral-1);
+    color: #ffffff;
+  }
+}
