--- a/assets/components/headingBlock/headingBlock.scss
+++ b/assets/components/headingBlock/headingBlock.scss
@@ -44,9 +44,11 @@
 }
 
 .component-heading-block__banner {
-  border-top: 1px solid gu-colour(news-garnett-highlight);
-  padding: 8px ($gu-h-spacing / 2) $gu-v-spacing;
+  border-top: 1px solid #ffffff;
+  color: #ffffff;
+  padding: ($gu-v-spacing / 1.5) ($gu-h-spacing / 2) $gu-v-spacing;
   font-size: 17px;
   line-height: 1;
   font-family: $gu-headline;
+  background-color: gu-colour(garnett-neutral-1);
 }
