--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -13,6 +13,7 @@
 .weekly-subscription-landing-header {
   background: gu-colour(garnett-neutral-3);
   overflow: hidden;
+  padding-top: 300px;
   .component-left-margin-section__content {
     border-left: 1px solid gu-colour(garnett-neutral-4);
   }
