--- a/assets/components/forms/standardFields/input.scss
+++ b/assets/components/forms/standardFields/input.scss
@@ -3,7 +3,7 @@
 .component-input:not([type="radio"]) {
   @include form-field;
 
-  height: 38px;
+  min-height: 38px;
   padding-left: 12px;
   padding-right: 12px;
   width: 314px;
