--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -10,6 +10,11 @@
 @import '~components/headingBlock/headingBlock';
 @import '~components/leftMarginSection/leftMarginSection';
 
+@import 'components/weeklyContentBlock';
+@import 'components/weeklyTextBlock';
+@import 'components/weeklyFeatureList';
+
+
 .weekly-subscription-landing-header {
   background: gu-colour(garnett-neutral-3);
   overflow: hidden;
