--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -13,27 +13,4 @@
 @import 'components/weeklyContentBlock';
 @import 'components/weeklyTextBlock';
 @import 'components/weeklyFeatureList';
-
-
-.weekly-subscription-landing-header {
-  background: gu-colour(garnett-neutral-3);
-  overflow: hidden;
-  padding-top: 300px;
-  .component-left-margin-section__content {
-    border-left: 1px solid gu-colour(garnett-neutral-4);
-  }
-}
-
-.weekly-subscription-underheader {
-  .component-left-margin-section__content {
-    border-left: 1px solid gu-colour(garnett-neutral-4);
-  }
-}
-
-.weekly-subscription-underheader__cta {
-  border-top: 1px solid #ffffff;
-  margin-bottom: 50px;
-  padding: ($gu-v-spacing / 2)  ($gu-h-spacing / 2);
-  background: gu-colour(garnett-neutral-1);
-  color: #ffffff;
-}
+@import 'components/weeklyHero';
