--- a/assets/pages/weekly-subscription-landing/components/weeklyHero.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyHero.scss
@@ -16,7 +16,7 @@
 
 .component-weekly-hero-hanger__content {
   border-top: 1px solid #ffffff;
-  padding: ($gu-v-spacing / 2)  ($gu-h-spacing / 2);
+  padding: $gu-v-spacing  ($gu-h-spacing / 2);
   background: gu-colour(garnett-neutral-1);
   color: #ffffff;
 }
