--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -14,3 +14,4 @@
 @import 'components/weeklyTextBlock';
 @import 'components/weeklyFeatureList';
 @import 'components/weeklyHero';
+@import 'components/weeklyCtaButton';
