--- a/assets/pages/weekly-subscription-landing/components/weeklyCta.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyCta.scss
@@ -1,8 +1,10 @@
-.component-weekly-cta-button {
+.component-weekly-cta {
   font-size: 16px;
+  line-height: 1.2;
+  display: inline-block;
   font-family: $gu-text-sans-web;
   font-weight: bold;
-  padding: $gu-v-spacing $gu-h-spacing;
+  padding: ($gu-v-spacing) $gu-h-spacing;
   background-color: gu-colour(news-garnett-highlight);
   color: gu-colour(garnett-neutral-1);
   border: none;
@@ -13,13 +15,13 @@
   }
 }
 
-.component-weekly-cta-button__content,
-.component-weekly-cta-button svg {
+.component-weekly-cta__content,
+.component-weekly-cta svg {
   display: inline-block;
   vertical-align: middle;
 }
 
-.component-weekly-cta-button svg {
+.component-weekly-cta svg {
   height: $gu-v-spacing * 2;
   margin: $gu-v-spacing * -1 $gu-h-spacing * -.5 $gu-v-spacing * -1 $gu-h-spacing * .5;
 }
