--- a/assets/pages/weekly-subscription-landing/components/weeklyCta.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyCta.scss
@@ -1,4 +1,4 @@
-.component-weekly-cta {
+.weekly-cta {
   font-size: 16px;
   line-height: 1.2;
   display: inline-block;
@@ -15,13 +15,13 @@
   }
 }
 
-.component-weekly-cta__content,
-.component-weekly-cta svg {
+.weekly-cta__content,
+.weekly-cta svg {
   display: inline-block;
   vertical-align: middle;
 }
 
-.component-weekly-cta svg {
+.weekly-cta svg {
   height: $gu-v-spacing * 2;
   margin: $gu-v-spacing * -1 $gu-h-spacing * -.5 $gu-v-spacing * -1 $gu-h-spacing * .5;
 }
